# for_homework_and_studying

./: CMakeLists.txt  README.md  division.c  inc.c  main.c  printf.c  scanf.c  scanf_printf.c  sizeof.c  sum.c
