cmake_minimum_required(VERSION 4.0)
project(for_homework_and_studying C)

set(CMAKE_C_STANDARD 11)

add_executable(main
        main.c)

add_executable(example
        sum.c)

add_executable(sizeof
        sizeof.c)

add_executable(printf
        printf.c)

add_executable(scanf
        scanf.c)

add_executable(scanf_prinf
        scanf_printf.c)

add_executable(division
        division.c)

add_executable(inc
        inc.c)